--- a/views/about.ejs
+++ b/views/about.ejs
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Ninja</title>
-</head>
+
+<%- include("./partials/head") %>
+
 <body>
-    <nav>
-        <div class="site-title">
-            <a href="/">Blog Ninja</a>
-            <p>A Net Ninja Site</p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
+    
+    <%- include("./partials/nav") %>
 
     <div class="about content">
         <h2>About Us</h2>
@@ -24,5 +13,6 @@
         <p>En eller annen tilfeldig tekst</p>
         <p>Dette er bare eksempel tekst</p>
     </div>
+    <%- include("./partials/footer") %>
 </body>
 </html>
