--- a/views/create.ejs
+++ b/views/create.ejs
@@ -1,22 +1,11 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Ninja</title>
-</head>
+
+<%- include("./partials/head") %>
+
 <body>
-    <nav>
-        <div class="site-title">
-            <a href="/">Blog Ninja</a>
-            <p>A net ninja site</p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
+    
+    <%- include("./partials/nav") %>
 
     <div class="create-blog content">
         <form>
@@ -30,5 +19,6 @@
         </form>
     </div>
     
+    <%- include("./partials/footer") %>
 </body>
 </html>
