--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,30 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Blog Ninja</title>
-</head>
+
+<%- include("./partials/head") %>
+
 <body>
 
-    <% const name = "mario" %>
+    <% const name = "EJS virker riktig!" %>
+    <% console.log("EJS is working"); %>
 
-    <nav>
-        <div class="site-title">
-            <p><%= name %></p>
-            <a href="/">Blog Ninja</a>
-            <p>A net ninja site</p>
-        </div>
-        <ul>
-            <li><a href="/">Blogs</a></li>
-            <li><a href="/about">About</a></li>
-            <li><a href="/blogs/create">New Blog</a></li>
-        </ul>
-    </nav>
+    <%- include("./partials/nav") %>
 
     <div class="blogs content">
         <h2>All blogs</h2>
+
+        <% if (blogs.length > 0) { %>
+            <% blogs.forEach(blog => { %>
+
+                <h3 class="title"><%= blog.title %></h3>
+                <p class="snippet"><%= blog.snippet %></p>
+
+                <% }) %>
+        <% } else { %>
+            <p>No blogs available</p>
+        <% } %>
+        
+
     </div>
+
+    <%- include("./partials/footer") %>
     
 </body>
 </html>
